# ExerciciosSeparados

./: .editorconfig  .gitattributes  .gitignore  Beleza.sln  CHANGES.md  CMakeLists.txt  Exercises.sln  Exercícios.vcxproj  Exercícios.vcxproj.filters  Makefile  README.md  build.ps1  build.sh  cansadin  cansadin.c  criar_exercicios.ps1  make-output.txt  mtcansado.c  new_exercise.sh
.github/workflows/: ci.yml
.templates/: ex_template.c  main_template.c
Ex01_Soma/: Ex001_Sominha.c  Ex01_Soma.c  Ex01_Soma.vcxproj  Ex01_Soma.vcxproj.filters  ex001  ex01.c  main.c
Ex01_Soma/x64/Debug/: Ex01_Soma.exe.recipe  Ex01_Soma.ilk  vc143.idb
Ex01_Soma/x64/Debug/Ex01_Soma.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Ex02_Divisao/: Ex02_Divisao  Ex02_Divisao.c  Ex02_Divisao.vcxproj  Ex02_Divisao.vcxproj.filters
Ex02_Media/: ex002  ex02.c  main.c
Ex03_Multi/: Ex03_Multi.c  Ex03_Multi.vcxproj  Ex03_Multi.vcxproj.filters
Ex03_ParOuImpar/: ex003  ex03.c  main.c
Ex04_MaiorNumero/: ex004  ex04.c  main.c
Ex05_Tabuada/: ex005  ex05.c  main.c
Ex06_Fatorial/: ex006  ex06.c  main.c
Ex07_ContagemRegressiva/: ex007  ex07.c  main.c
Ex08_ConversaoTemperatura/: ex008  ex08.c  main.c
Ex09_ImprimeSequencia/: ex009  ex09.c  main.c
Ex09_Pot/: potzin  potzin.c
Ex10_ValidaSenha/: ex010  ex10.c  main.c
Ex11_Risada/: ex11.c  main.c
GabiELucca/: GabiELucca.c  GabiELucca.vcxproj  GabiELucca.vcxproj.filters
GabiELucca/x64/Debug/: GabiELucca.exe.recipe  GabiELucca.ilk  vc143.idb
GabiELucca/x64/Debug/GabiELucca.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GabiELucca.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TesteMinimo/: Makefile  main.c
scripts/: create_exercise.ps1  create_exercise.sh  list.ps1  new.ps1
